[package]
name = "elm327"
authors = ["David Cole <david.cole1340@gmail.com>"]
description = "Rust library for interacting with ELM327 devices."
version = "0.1.0"
edition = "2018"

[dependencies]
# serialport = "4"
tokio = { version = "1.8", features = ["full"] }
tokio-serial = { git = "git://github.com/davidcole1340/tokio-serial" } # Waiting for Tokio 1.0 update
futures = "0.3"